Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31885

Debugging Android apps is broken

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P0: Blocker P0: Blocker
    • Qt Creator 15.0.0-beta2
    • Qt Creator 15.0.0-beta1
    • Debugger
    • None
    • Android
    • 586fe9659 (15.0), 20979ae75 (15.0)

      Debugging any qt apps on android (I used an Android 13 AVD) doesn't work anymore.

      Steps to reproduce:

      • create a new project
      • hit debug button

        For Gerrit Dashboard: QTCREATORBUG-31885
        # Subject Branch Project Status CR V

            jkobus Jarek Kobus
            taipan BogDan Vatra
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes