Android: Fix running qml application when debugging is enabled

Execute onQmlDebugSync only in case isQmlDebug.
Before it was mistakenly executed always.

This doesn't fix debugging on Android, but fixes running qml app
when debugging is enabled.

Amends 5e46ff6cc31d0a139d3edef6432f205a3cf02255

Task-number: QTCREATORBUG-31885
Change-Id: I8f2dcefac671e87bbb6e9db5fa8c985d9830a9b1
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>